--- a/pikatanuki/client/public/index.html
+++ b/pikatanuki/client/public/index.html
@@ -56,6 +56,7 @@
             font-size: 16px;
         }
     </style>
+    <link href="https://fonts.googleapis.com/css?family=Kosugi+Maru&display=swap" rel="stylesheet">
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
