--- a/pikatanuki/client/public/index.html
+++ b/pikatanuki/client/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="viewport" content="initial-scale=0.5"/>
     <meta name="theme-color" content="#000000"/>
     <title>ピカ狸</title>
     <style>
